feat: use latest api-snippets
