# src/interface/api.yaml
@@ -19,8 +19,9 @@ paths:
         - sampled
       operationId: PostConsents
       summary: PostConsents
-      description: |
-        DFSP sends this request to the PISP after granting consent.
+      description: >
+        DFSP sends this request to the PISP after granting consent. DFSP sends
+        this request to an Auth service to validate a signed consent.
       parameters:
         - $ref: '#/components/parameters/Accept'
         - $ref: '#/components/parameters/Content-Length'
@@ -101,25 +102,71 @@ paths:
           $ref: '#/components/responses/501'
         '503':
           $ref: '#/components/responses/503'
+    patch:
+      description: >
+        The HTTP request `PATCH /consents/{ID}` is used
+
+
+        - In account linking in the Credential Registration phase. Used by a
+        DFSP
+          to notify a PISP a credential has been verified and registered with an
+          Auth service.
+
+        - In account unlinking by a hub hosted auth service and by DFSPs
+          in non-hub hosted scenarios to notify participants of a consent being revoked.
+
+          Called by a `auth-service` to notify a PISP and DFSP of consent status in hub hosted scenario.
+          Called by a `DFSP` to notify a PISP of consent status in non-hub hosted scenario.
+      tags:
+        - consents
+        - sampled
+      operationId: PatchConsentByID
+      summary: PatchConsentByID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              oneOf:
+                - $ref: '#/components/schemas/ConsentsIDPatchResponseVerified'
+                - $ref: '#/components/schemas/ConsentsIDPatchResponseRevoked'
+      parameters:
+        - $ref: '#/components/parameters/Content-Length'
+      responses:
+        '200':
+          $ref: '#/components/responses/200'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '405':
+          $ref: '#/components/responses/405'
+        '406':
+          $ref: '#/components/responses/406'
+        '501':
+          $ref: '#/components/responses/501'
+        '503':
+          $ref: '#/components/responses/503'
     put:
       description: >
         The HTTP request `PUT /consents/{ID}` is used by the PISP and Auth
         Service.
 
 
-        - Called by a `auth-service` to request PISP to add the credential
-        details.
+        - Called by a `PISP` to after signing a challenge. Sent to an DFSP for
+        verification.
 
-        - Called by a `PISP` to after signing a challenge. Sent to an
-        `auth-service` for verification.
-
-        - Called by a `auth-service` to notify a DFSP and PISP that a credential
-        has been verified and registered.
+        - Called by a `auth-service` to notify a DFSP that a credential has been
+        verified and registered.
       tags:
         - consents
         - sampled
-      operationId: UpdateConsent
-      summary: UpdateConsent
+      operationId: PutConsentByID
+      summary: PutConsentByID
       requestBody:
         required: true
         content:
@@ -127,7 +174,6 @@ paths:
             schema:
               oneOf:
                 - $ref: '#/components/schemas/ConsentsIDPutResponseSigned'
-                - $ref: '#/components/schemas/ConsentsIDPutResponseUnsigned'
                 - $ref: '#/components/schemas/ConsentsIDPutResponseVerified'
       parameters:
         - $ref: '#/components/parameters/Content-Length'
@@ -487,8 +533,68 @@ components:
         regular expression for interoperability reasons. A UUID is always 36
         characters long, 32 hexadecimal symbols and 4 dashes (‘-‘).
       example: b51ec534-ee48-4575-b6a9-ead2955b8069
-    AccountAddress:
-      title: AccountAddress
+    CredentialType:
+      title: CredentialType
+      type: string
+      enum:
+        - FIDO
+      description: |
+        The type of the Credential.
+        - "FIDO" - A FIDO public/private keypair.
+    PublicKeyCredential:
+      title: PublicKeyCredential
+      type: object
+      description: |
+        An object sent in a `PUT /consents/{ID}` request.
+        Based on https://w3c.github.io/webauthn/#iface-pkcredential
+      properties:
+        id:
+          type: string
+          description: TBD
+        response:
+          type: object
+          properties:
+            clientDataJSON:
+              type: string
+              description: TBD
+          required:
+            - clientDataJSON
+      required:
+        - id
+        - response
+    SignedCredential:
+      title: SignedCredential
+      type: object
+      description: >
+        A credential used to allow a user to prove their identity and access
+
+        to an account with a DFSP.
+
+
+        SignedCredential is a special formatting of the credential to allow us
+        to be
+
+        more explicit about the `status` field - it should only ever be PENDING
+        when
+
+        updating a credential.
+      properties:
+        credentialType:
+          $ref: '#/components/schemas/CredentialType'
+        status:
+          type: string
+          enum:
+            - PENDING
+          description: The challenge has signed but not yet verified.
+        payload:
+          $ref: '#/components/schemas/PublicKeyCredential'
+      required:
+        - credentialType
+        - status
+        - payload
+      additionalProperties: false
+    AccountId:
+      title: AccountId
       type: string
       description: >
         A long-lived unique account identifier provided by the DFSP. This MUST
@@ -521,7 +627,7 @@ components:
         }
       properties:
         accountId:
-          $ref: '#/components/schemas/AccountAddress'
+          $ref: '#/components/schemas/AccountId'
         actions:
           type: array
           items:
@@ -547,13 +653,14 @@ components:
           description: |
             The id of the ConsentRequest that was used to initiate the
             creation of this Consent.
+        credential:
+          $ref: '#/components/schemas/SignedCredential'
         scopes:
           type: array
           items:
             $ref: '#/components/schemas/Scope'
       required:
         - consentId
-        - consentRequestId
         - scopes
     ErrorCode:
       title: ErrorCode
@@ -637,104 +744,16 @@ components:
       properties:
         errorInformation:
           $ref: '#/components/schemas/ErrorInformation'
-    FspId:
-      title: FspId
-      type: string
-      minLength: 1
-      maxLength: 32
-      description: FSP identifier.
-    CredentialType:
-      title: CredentialType
-      type: string
-      enum:
-        - FIDO
-      description: |
-        The type of the Credential.
-        - "FIDO" - A FIDO public/private keypair.
-    CredentialChallengeSigned:
-      title: CredentialChallengeSigned
-      type: object
-      description: |
-        The challenge that has been signed by a PISP.
-      properties:
-        payload:
-          type: string
-          description: >-
-            Base64 encoded binary of the challenge that must be answered by the
-            PISP.
-        signature:
-          type: string
-          description: >-
-            Base64 encoded binary string or result of the payload signed by the
-            PISP using the private key.
-      required:
-        - payload
-        - signature
-      additionalProperties: false
-    SignedCredential:
-      title: SignedCredential
-      type: object
-      description: >
-        A credential used to allow a user to prove their identity and access
-
-        to an account with a DFSP.
-
-
-        SignedCredential is a special formatting of the credential to allow us
-        to be
-
-        more explicit about the `status` field - it should only ever be PENDING
-        when updating
-
-        a credential.
-      properties:
-        id:
-          type: string
-          description: The id of a Credential.
-        type:
-          $ref: '#/components/schemas/CredentialType'
-        status:
-          type: string
-          enum:
-            - PENDING
-          description: The challenge has signed but not yet verified.
-        challenge:
-          $ref: '#/components/schemas/CredentialChallengeSigned'
-        payload:
-          type: string
-          description: Base64 encoded bytes - The public key of the Public/Private keypair.
-      required:
-        - id
-        - type
-        - status
-        - challenge
-        - payload
-      additionalProperties: false
     ConsentsIDPutResponseSigned:
       title: ConsentsIDPutResponseSigned
       type: object
       description: >
         The HTTP request `PUT /consents/{ID}` is used by the PISP to update a
-        Consent
+        Consent with a signed challenge and register a credential.
 
-        with a signed challenge and register a credential.
-
-
-        Called by a `PISP` to after signing a challenge. Sent to an
-        `auth-service` for verification.
+        Called by a `PISP` to after signing a challenge. Sent to a DFSP for
+        verification.
       properties:
-        requestId:
-          allOf:
-            - $ref: '#/components/schemas/CorrelationId'
-          description: |
-            The id of the ConsentRequest that was used to initiate the
-            creation of this Consent.
-        participantId:
-          $ref: '#/components/schemas/FspId'
-        initiatorId:
-          allOf:
-            - $ref: '#/components/schemas/FspId'
-          description: PISP identifier who uses this Consent.
         scopes:
           type: array
           items:
@@ -742,92 +761,6 @@ components:
         credential:
           $ref: '#/components/schemas/SignedCredential'
       required:
-        - requestId
-        - participantId
-        - initiatorId
-        - scopes
-        - credential
-    CredentialChallengeUnsigned:
-      title: CredentialChallengeSigned
-      type: object
-      description: |
-        The challenge issued by a DFSP that must be answered by the PISP.
-      properties:
-        payload:
-          type: string
-          description: >-
-            Base64 encoded binary of the challenge that must be answered by the
-            PISP.
-      required:
-        - payload
-      additionalProperties: false
-    UnsignedCredential:
-      title: UnsignedCredential
-      type: object
-      description: >
-        A credential used to allow a user to prove their identity and access
-
-        to an account with a DFSP.
-
-
-        UnsignedCredential is a special formatting of the credential to allow us
-        to be
-
-        more explicit about the `status` field - it should only ever be PENDING
-        when updating
-
-        a credential.
-      properties:
-        type:
-          $ref: '#/components/schemas/CredentialType'
-        status:
-          type: string
-          enum:
-            - PENDING
-          description: The challenge has initialized but not yet answered by the PISP.
-        challenge:
-          $ref: '#/components/schemas/CredentialChallengeUnsigned'
-      required:
-        - type
-        - status
-        - challenge
-      additionalProperties: false
-    ConsentsIDPutResponseUnsigned:
-      title: ConsentsIDPutResponseUnsigned
-      type: object
-      description: >
-        The HTTP request `PUT /consents/{ID}` is used to request a PISP to sign
-        a challenge.
-
-        The `{ID}` in the URI should contain the `{ID}` that was used in the
-        `POST /consents`.
-
-
-        Called by a `auth-service` to request PISP to add the credential
-        details.
-      properties:
-        requestId:
-          allOf:
-            - $ref: '#/components/schemas/CorrelationId'
-          description: |
-            The id of the ConsentRequest that was used to initiate the
-            creation of this Consent.
-        participantId:
-          $ref: '#/components/schemas/FspId'
-        initiatorId:
-          allOf:
-            - $ref: '#/components/schemas/FspId'
-          description: PISP identifier who uses this Consent.
-        scopes:
-          type: array
-          items:
-            $ref: '#/components/schemas/Scope'
-        credential:
-          $ref: '#/components/schemas/UnsignedCredential'
-      required:
-        - requestId
-        - participantId
-        - initiatorId
         - scopes
         - credential
     VerifiedCredential:
@@ -843,55 +776,34 @@ components:
         to be
 
         more explicit about the `status` field - it should only ever be VERIFIED
-        when updating
+        when
 
-        a credential.
+        updating a credential.
       properties:
-        id:
-          type: string
-          description: The id of a Credential.
-        type:
+        credentialType:
           $ref: '#/components/schemas/CredentialType'
         status:
           type: string
           enum:
             - VERIFIED
           description: 'The Credential is valid, and ready to be used by the PISP.'
-        challenge:
-          $ref: '#/components/schemas/CredentialChallengeSigned'
         payload:
-          type: string
-          description: Base64 encoded bytes - The public key of the Public/Private keypair.
+          $ref: '#/components/schemas/PublicKeyCredential'
       required:
-        - type
+        - credentialType
         - status
-        - challenge
+        - payload
       additionalProperties: false
     ConsentsIDPutResponseVerified:
       title: ConsentsIDPutResponseVerified
       type: object
       description: >
         The HTTP request `PUT /consents/{ID}` is used by the DFSP or
-        Auth-Service to
+        Auth-Service to update a Consent object once it has been Verified.
 
-        update a Consent object once it has been Verified.
-
-
-        Called by a `auth-service` to notify a DFSP and PISP that a credential
-        has been verified and registered.
+        Called by a `auth-service` to notify a DFSP that a credential has been
+        verified and registered.
       properties:
-        requestId:
-          allOf:
-            - $ref: '#/components/schemas/CorrelationId'
-          description: |
-            The id of the ConsentRequest that was used to initiate the
-            creation of this Consent.
-        participantId:
-          $ref: '#/components/schemas/FspId'
-        initiatorId:
-          allOf:
-            - $ref: '#/components/schemas/FspId'
-          description: PISP identifier who uses this Consent.
         scopes:
           type: array
           items:
@@ -899,11 +811,73 @@ components:
         credential:
           $ref: '#/components/schemas/VerifiedCredential'
       required:
-        - requestId
-        - participantId
-        - initiatorId
         - scopes
         - credential
+    ConsentStatusTypeVerified:
+      title: ConsentStatusType
+      type: string
+      enum:
+        - VERIFIED
+      description: |
+        The status of the Consent.
+        - "VERIFIED" - The Consent is valid and verified.
+    ConsentsIDPatchResponseVerified:
+      title: ConsentsIDPatchResponseVerified
+      description: |
+        PATCH /consents/{ID} request object.
+
+        Sent by the DFSP to the PISP when a consent is verified.
+        Used in the "Register Credential" part of the Account linking flow.
+      type: object
+      properties:
+        credential:
+          type: object
+          properties:
+            status:
+              $ref: '#/components/schemas/ConsentStatusTypeVerified'
+          required:
+            - status
+      required:
+        - credential
+    ConsentStatusTypeRevoked:
+      title: ConsentStatusType
+      type: string
+      enum:
+        - REVOKED
+      description: |
+        The status of the Consent.
+        - "REVOKED" - The Consent is no longer valid and has been revoked.
+    DateTime:
+      title: DateTime
+      type: string
+      pattern: >-
+        ^(?:[1-9]\d{3}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1\d|2[0-8])|(?:0[13-9]|1[0-2])-(?:29|30)|(?:0[13578]|1[02])-31)|(?:[1-9]\d(?:0[48]|[2468][048]|[13579][26])|(?:[2468][048]|[13579][26])00)-02-29)T(?:[01]\d|2[0-3]):[0-5]\d:[0-5]\d(?:(\.\d{3}))(?:Z|[+-][01]\d:[0-5]\d)$
+      description: >-
+        The API data type DateTime is a JSON String in a lexical format that is
+        restricted by a regular expression for interoperability reasons. The
+        format is according to [ISO
+        8601](https://www.iso.org/iso-8601-date-and-time-format.html), expressed
+        in a combined date, time and time zone format. A more readable version
+        of the format is yyyy-MM-ddTHH:mm:ss.SSS[-HH:MM]. Examples are
+        "2016-05-24T08:38:08.699-04:00", "2016-05-24T08:38:08.699Z" (where Z
+        indicates Zulu time zone, same as UTC).
+      example: '2016-05-24T08:38:08.699-04:00'
+    ConsentsIDPatchResponseRevoked:
+      title: ConsentsIDPatchResponseRevoked
+      description: |
+        PATCH /consents/{ID} request object.
+
+        Sent to both the PISP and DFSP when a consent is revoked.
+        Used in the "Unlinking" part of the Account Unlinking flow.
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/ConsentStatusTypeRevoked'
+        revokedAt:
+          $ref: '#/components/schemas/DateTime'
+      required:
+        - status
+        - revokedAt
     BinaryString:
       type: string
       pattern: '^[A-Za-z0-9-_]+[=]{0,2}$'
@@ -936,7 +910,7 @@ components:
             transaction.
         sourceAccountId:
           allOf:
-            - $ref: '#/components/schemas/AccountAddress'
+            - $ref: '#/components/schemas/AccountId'
           description: 'DFSP specific account identifiers, e.g. `dfspa.alice.1234`'
         status:
           type: string
@@ -974,7 +948,7 @@ components:
             transaction.
         sourceAccountId:
           allOf:
-            - $ref: '#/components/schemas/AccountAddress'
+            - $ref: '#/components/schemas/AccountId'
           description: 'DFSP specific account identifiers, e.g. `dfspa.alice.1234`'
         status:
           type: string
